src/test/ui/associated-const/associated-const-type-parameter-arrays.stderr
error[E0277]: the trait bound `A: Foo` is not satisfied
  --> $DIR/associated-const-type-parameter-arrays.rs:16:23
   |
LL |     const Y: usize;
   |     --------------- required by `Foo::Y`
...
LL |     let _array: [u32; <A as Foo>::Y];
   |                       ^^^^^^^^^^^^^ the trait `Foo` is not implemented for `A`
   |
help: consider further restricting this bound
   |
LL | pub fn test<A: Foo + Foo, B: Foo>() {
   |                    ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
